--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
         "async":"*",
         "hogan.js":"*",
         "moment":"*",
-        "colors":"*",
-        "bower": "^1.3.3"
+        "colors":"*"
     }
 }
