basic carousel works

--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,12 @@
     "tmp"
   ],
   "dependencies": {
-    "bootstrap": "*"
+    "bootstrap": "*",
+    "backbone": "*",
+    "hogan": "*",
+    "jquery": "*",
+    "requirejs": "*",
+    "underscore": "*",
+    "requirejs-text": "*"
   }
 }
